2008-08-30  Matthias Clasen  <mclasen@redhat.com>

	* common/gmountspec.c (g_mount_spec_from_dbus): Plug a tiny
	memory leak.

2008-08-28  David Zeuthen  <davidz@redhat.com>

	* monitor/proxy/gproxyvolume.c: (g_proxy_volume_mount):
	* monitor/proxy/gvfsproxyvolumemonitordaemon.c:
	(handle_volume_mount): Make sure we really read mount_flags and
	use_mount_operation. Fixes RH bug 460223.

2008-08-27  Bastien Nocera  <hadess@hadess.net>

	* client/gdaemonvfs.c (get_mountspec_from_uri),
	(_g_daemon_vfs_get_uri_for_mountspec): Don't drop
	query and fragment portions of the URI when decoding
	it and the URI scheme isn't handled by any backends
	(Closes: #549553)

2008-08-25  Matthias Clasen  <mclasen@redhat.com>

	Bug 549253 – error path leaks

	* common/gmountoperationdbus.c: 
	* common/gdbusutils.c:
	* daemon/gvfsbackendgphoto2.c:
	* daemon/gvfsbackendtrash.c:
	* daemon/gvfsjobsetattribute.c: Plug some leaks on
	error paths.

2008-08-25  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackenddav.c (ms_response_to_file_info):
	Same as below but for the webdav's getlastmodified
	response (Closes: #538573)

2008-08-22  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendhttp.c (query_info_ready): Use
	libsoup to parse the "Last-Modified" header, not
	the ISO-8601 parsing functions (Closes: #547133)
	Requires libsoup trunk

2008-08-21  Hans Petter Jansson  <hpj@novell.com>

	* daemon/gvfsbackendgphoto2.c (ensure_ignore_prefix)
	(do_mount)
	(do_enumerate): Improve various user- and translator-
	unfriendly error messages.

2008-08-21  Hans Petter Jansson  <hpj@novell.com>

	* configure.ac: Late post-release version bump to 0.99.6.

2008-08-21  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* daemon/gvfsbackendgphoto2.c (do_unmount):
	Handle plural forms correctly. Fixes bug #548841.

=== gvfs 0.99.5 ===

2008-08-16  Jesse van den Kieboom  <jesse@icecrew.nl>

	* daemon/gvfsbackenddav.c:
	Fixed using display_name property getting overwritten
