@@ -1,3 +1,10 @@
+2008-09-01  Christian Kellner  <gicmo@gnome.org>
+
+	* monitor/hal/ghalvolume.c: (do_update_from_hal):
+	Use g_format_size_for_display for consistency.
+	Patch from Christian Persch <chpe@gnome.org>
+	Fixes bug #550100
+
 2008-08-30  Matthias Clasen  <mclasen@redhat.com>
 
 	* common/gmountspec.c (g_mount_spec_from_dbus): Plug a tiny
